--- a/styles/board-edit-overlay.css
+++ b/styles/board-edit-overlay.css
@@ -310,6 +310,7 @@ input.subtask-input:focus {
   margin-right: 8px !important;
   border-radius: 0px !important;
   width: 100% !important;
+  padding-right: 80px !important;
 }
 
 .input-container {
